# sigma_tcp_esp32

./: Cargo.toml  README.md
examples/: debug.rs
examples/backend/: debug.rs  mod.rs
sigmadsp_esp32/: Cargo.toml
sigmadsp_esp32/.cargo/: config.toml
sigmadsp_esp32/src/: main.rs  wifi_handler.rs
src/: lib.rs  main.rs
src/backend/: debug.rs  mod.rs
src/examples/: debug.rs
src/protocol/: mod.rs
webui/: config.toml
webui/content/: _index.md  dsp-control.md
webui/dsp-control-wasm/: Cargo.toml  deploy.sh
webui/dsp-control-wasm/src/: lib.rs  reg_io.rs
webui/sass/: dsp-control.scss
webui/templates/: base.html  dsp-control.html
