[package]
name = "sigmadsp_esp32"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "sigmadsp_esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.98"
esp-idf-hal = "0.45.2"
sigma_tcp_rs = { path = ".." }
smallvec = "1.15.0"

[build-dependencies]
embuild = "0.33"
